--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div id="gear">
       <div id="pokemonCaught">CAUGHT:  </div>
-      <div id="pokemonLeft">MISSING: </div>
+      <div id="pokemonLeft">MISSING: mew</div>
     </div>
   </div>
 </body>
