--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="help1" onclick="help1()">HINT 1</div>
         <div id="help2" onclick="help2()">HINT 2</div>
         <div id="help3" onclick="help3()">HINT 3</div>
+        <div id="finished" onclick="virus()"> CLICK WHEN DONE </div
       </div>
     </div>
     <div id="gear">
