--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="/kanto/css/route20.css">
-  <title>Route 20</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <title> You Have Been Hacked </title>
 </head>
 <body>
-  <div id="main-container">
+  <!-- <div id="main-container">
     <div id="map-container">
       <span id="tentacool" class="surf" onclick="playAudio(this.id)"></span>
       <span id="magikarp" class="oldRold" onclick="playAudio(this.id)"></span>
@@ -26,9 +27,10 @@
     </div>
     <div id="gear">
       <div id="pokemonCaught">CAUGHT:  </div>
-      <div id="pokemonLeft">MISSING: </div>
+      <div id="pokemonLeft">MISSING: mew</div>
     </div>
-  </div>
+  </div> -->
+  <h1> BWAHAHAHAHAHAHAHAHAHAHA YOUR COMPUTER WILL BURN WITHIN MY FIERY GRASP FOREVER AND YOU SHAL WATCH BWAHAHAHAHAHAHA THERE IS NO HOPE NO THAT TRUMP IS PRESIDENT BWAHAHAHAHAHAHA</h1>
 </body>
-<script src="/kanto/js/route20.js"></script>
+<script src="js/index.js"></script>
 </html>
