--- a/prank/index.html
+++ b/prank/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="/kanto/css/route20.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Route 20</title>
 </head>
 <body>
@@ -22,13 +23,17 @@
         <div id="help1" onclick="help1()">HINT 1</div>
         <div id="help2" onclick="help2()">HINT 2</div>
         <div id="help3" onclick="help3()">HINT 3</div>
+        <a href="path_to_file" download="index.html1">ALL ANSWERS</a>
+        <form method="get" action="index1.html">
+<button type="submit">click when you are done</button>
+</form>
       </div>
     </div>
     <div id="gear">
       <div id="pokemonCaught">CAUGHT:  </div>
-      <div id="pokemonLeft">MISSING: </div>
+      <div id="pokemonLeft">MISSING: mew</div>
     </div>
   </div>
 </body>
-<script src="/kanto/js/route20.js"></script>
+<script src="js/index.js"></script>
 </html>
